# fsm-web-uploader

./: .gitignore  LICENSES.md  README.md  cli.py  config_template.ini  editor.py  env_template  environment.yml  fs_uploader.py  ftp.py  gui.py  helpWindow.py  html_parse.py  index.htm  internals.py  licenseWindow.py  main.py  mainWindow.py  pyproject.toml  requirements.txt  test.py  timeWindow.py  workers.py
templates/: config.json  example_text_replacer.csv  replacements.json
ui/: helpWindow.ui  licenseWindow.ui  mainWindow.ui  timeWindow.ui
