[project]
name = "fsm-web-uploader"
version = "1.0.0rc1"
description = "Program to upload FS Manager created websites using FTP."
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pyinstaller>=6.13.0",
    "pyside6>=6.9.2",
    "watchdog>=6.0.0",
]
